# nexa

./: Cargo.toml  go.mod  go.sum
.github/workflows/: build-luci-app.yml  main.yml  rust.yml
cmd/nexa/: main.go
internal/api/: api.go
internal/app/: app.go
internal/assets/: embed.go
internal/auth/: auth.go
internal/config/: config.go
internal/core/: core.go
internal/hosts/: hosts.go
internal/identifiers/: identifiers.go
internal/logger/: logger.go
internal/netmanager/: netmanager.go
internal/nfttemplate/: build.go  tmpl.go
internal/paths/: paths.go
internal/scheduler/: scheduler.go
internal/store/: store.go
internal/systemuser/: systemuser.go
linux/: nexa.service
openwrt/: nexa.init
openwrt/scripts/: build_binary.sh  build_ipk.sh
openwrt/templates/: acl.json  config  control  init.d.sh  log.js  main.js  menu.json  prerm.sh  uci-defaults.sh  ucode.uc
src/: api.rs  app.rs  assets.rs  auth.rs  config.rs  core.rs  hosts.rs  identifiers.rs  logger.rs  main.rs  netmanager.rs  nfttemplate.rs  paths.rs  scheduler.rs  static_serve.rs  store.rs  systemuser.rs  sysutil.rs  web.rs
web/: embed.go
